--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,16 @@
     }
 
     .bannerButton {
-        @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition
+        @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover:bg-[#1f1f1f] hover:text-[#e5e5e5]
         hover:opacity-75 md:py-2.5 md:px-8 md:text-xl
+    }
+
+    .input {
+        @apply w-full px-5 py-3.5 bg-[#333] placeholder-[red] rounded outline-none focus:bg-[#454545] autofill:!bg-[#141414]
+    }
+
+    .modalButton {
+        @apply flex h-11 w-11 items-center justify-center
+        rounded-full border-2 border-[gray] bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10
     }
 }
